fix(*): modernizing fjage